<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/l_shohi_calorie"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_shohi_calorie"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="ここに消費カロリーを出力" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/l_kyori"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_kyori"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="ここに距離を出力" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/l_speed"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="ここに速度を出力" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/l_mets"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_mets"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="ここにMETs値を出力" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/l_mode"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/tv_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/run_mode"/>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_measurement_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/l_measure_start"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>